Fixed the cards sticking after releasing thme issue