@@ -1,49 +1,56 @@
-import java.util.ArrayList;
-import javax.swing.*;
 import java.util.List;
+import javax.swing.*;
 import java.awt.*;
 import java.awt.event.*;
+import java.util.*;
 
-class CardPile extends JComponent {
-    
+public class CardPile extends JComponent {
     private List<Card> cards = new ArrayList<>();
     private int cardSpacing;
     private int cardWidth = 80;
     private int cardHeight = 120;
-    private List<Card> selectedCards = new ArrayList<>();
-    private int cardIndex = -1;
+    private static Point globalDragPosition;
+    private static CardPile draggingSource;
+    private static List<Card> draggingCards = new ArrayList<>();
     private Point dragOffset;
 
-    
-    public CardPile(JPanel tableau, List<Card> deck, int order, char type) {
-        
-        cardSpacing = (type == 'F') ? 0 : 30;
+    public CardPile(JPanel tabPanel, List<Card> deck, int order, char type) {
+        this.cards = new ArrayList<>();
+        this.cardSpacing = (type == 'F') ? 0 : 30;
 
-        for (int i=1; i<=order; i++) {
+        for (int i = 1; i <= order; i++) {
             Card card = deck.get(0);
             cards.add(card);
             deck.remove(0);
         }
-        
-        if (!cards.isEmpty()) cards.getLast().flip();
+
+        if (!cards.isEmpty()) {
+            cards.get(cards.size() - 1).flip();
+        }
 
         addMouseListener(new MouseAdapter() {
             @Override
-            public void mouseClicked(MouseEvent e) {
-                cardIndex = e.getY() / cardSpacing;
-                if (cardIndex >= 0 && cardIndex <= cards.size()) {
-                    Card card = cards.get(cardIndex);
-                    //flipCard(cardIndex);
-                    selectCards();
-                    if (!selectedCards.isEmpty()) {
-                        dragOffset = new Point(e.getX(), e.getY() - cardIndex * cardSpacing);
+            public void mousePressed(MouseEvent e) {
+                int clickedIndex = e.getY() / cardSpacing;
+                if (clickedIndex >= 0 && clickedIndex < cards.size()) {
+                    draggingCards.clear();
+                    for (int i = clickedIndex; i < cards.size(); i++) {
+                        if (cards.get(i).getIsFaceUp()) {
+                            draggingCards.add(cards.get(i));
+                        } else {
+                            break;
+                        }
+                    }
+                    if (!draggingCards.isEmpty()) {
+                        dragOffset = new Point(e.getX(), e.getY() - clickedIndex * cardSpacing);
+                        draggingSource = CardPile.this;
                     }
                 }
             }
 
-            /*@Override
+            @Override
             public void mouseReleased(MouseEvent e) {
-                if (!selectedCards.isEmpty()) {
+                if (!draggingCards.isEmpty()) {
                     Component target = SwingUtilities.getDeepestComponentAt(
                         getTopLevelAncestor(), e.getXOnScreen(), e.getYOnScreen()
                     );
@@ -53,44 +60,74 @@ class CardPile extends JComponent {
                             moveCardsToPile(targetPile);
                         }
                     }
-                    selectedCards.clear();
+                    draggingSource = null;
+                    draggingCards.clear();
                     repaint();
                 }
-            }*/
+            }
         });
 
         addMouseMotionListener(new MouseMotionAdapter() {
             @Override
             public void mouseDragged(MouseEvent e) {
-                if (!selectedCards.isEmpty()) {
-                    int x = e.getX() - dragOffset.x;
-                    int y = e.getY() - dragOffset.y;
+                if (!draggingCards.isEmpty()) {
+                    globalDragPosition = e.getLocationOnScreen();
                     repaint();
                 }
             }
         });
     }
 
+    private boolean isValidMove(CardPile targetPile) {
+        if (targetPile.isEmpty()) {
+            return draggingCards.get(0).getIntRank() == 13;
+        } else {
+            Card topCard = targetPile.getTopCard();
+            return draggingCards.get(0).isOppositeColor(topCard) &&
+                   draggingCards.get(0).getIntRank() == topCard.getIntRank() - 1;
+        }
+    }
+
+    private void moveCardsToPile(CardPile targetPile) {
+        draggingSource.cards.removeAll(draggingCards);
+        targetPile.addCards(draggingCards);
+        draggingSource.repaint();
+        targetPile.repaint();
+    }
+
+    public void addCards(List<Card> newCards) {
+        cards.addAll(newCards);
+    }
+
+    public boolean isEmpty() {
+        return cards.isEmpty();
+    }
+
+    public Card getTopCard() {
+        return cards.isEmpty() ? null : cards.get(cards.size() - 1);
+    }
+
     @Override
     protected void paintComponent(Graphics g) {
         super.paintComponent(g);
 
-        int yOffset = 0;
+        g.setColor(new Color(0, 100, 0));
+        g.fillRect(0, 0, getWidth(), getHeight());
 
+        int yOffset = 0;
         for (Card card : cards) {
-            if (!selectedCards.contains(card)){
-                Image image = card.getImg();
-                g.drawImage(image, 0, yOffset, this);
-                yOffset += cardSpacing;
+            if (!draggingCards.contains(card)) {
+                g.drawImage(card.getImg(), 0, yOffset, this);
             }
+            yOffset += cardSpacing;
         }
 
-        if (!selectedCards.isEmpty()) {
+        if (this == draggingSource && !draggingCards.isEmpty()) {
             Point mousePos = getMousePosition();
             if (mousePos != null) {
                 int dragY = mousePos.y - dragOffset.y;
-                for (int i = 0; i < selectedCards.size(); i++) {
-                    g.drawImage(selectedCards.get(i).getImg(), 0, dragY + i * cardSpacing, this);
+                for (int i = 0; i < draggingCards.size(); i++) {
+                    g.drawImage(draggingCards.get(i).getImg(), 0, dragY + i * cardSpacing, this);
                 }
             }
         }
@@ -98,26 +135,7 @@ class CardPile extends JComponent {
 
     @Override
     public Dimension getPreferredSize() {
-        int height = cards.size() *  cardSpacing + (cardHeight - cardSpacing);
+        int height = cards.size() * cardSpacing + (cardHeight - cardSpacing);
         return new Dimension(cardWidth, height);
-    }
-
-    private void flipCard(int index) {
-        if (index >= 0 && index < cards.size()) {
-            cards.get(index).flip();
-            repaint();
-        }
-    } 
-
-    private void selectCards() {
-        selectedCards.clear();
-        for (int i=cardIndex; i<cards.size(); i++) {
-            Card card = cards.get(i);
-            if (card.getIsFaceUp()) {
-                selectedCards.add(card);
-                System.out.println(card);
-            }
-            else {break;}
-        }
     }
 }
